fixed overlapping; changed % to vh for height

--- a/proj-pers-page-spec/styles/style.css
+++ b/proj-pers-page-spec/styles/style.css
@@ -4,19 +4,20 @@
 
 html, body {
     color: #283236;
-    height: 100%;
+    height: 100vh;
     min-height: 900px;
-    display: block;
-    position: static;
+    /* display: block; */
+    /* position: static; */
     font-family: ABeeZee, sans-serif;
     font-size: 14px;
 }
 
 div {
-    display: block;
+    /* display: block; */
     margin: 0 auto;
     text-align: center;
     width: 100%;
+    /* min-width: 500px; */
 }
 
 ul {
@@ -91,7 +92,7 @@ footer {
 }
 
 .header {
-    height: 26%;
+    height: calc(24vh+100px);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -99,24 +100,24 @@ footer {
 
 .overview {
     background-color: #fff;
-    height: 24%;
+    height: calc(24vh+30px);
 }
 
 .skills {
     background-color: #f7f8f5;
-    height: 30%
+    height: calc(30vh+50px);
 }
 
 .email {
     background-color: #fff;
-    height: 12%;
+    height: 12vh;
     text-align: center;
 }
 
 .socials {
-    height: 18%;
+    height: 8vh;
     position: relative;
-    bottom: -20px;
+    bottom: 0;
 }
 
 
@@ -153,7 +154,6 @@ footer {
 }
 
 .skill-first, .skill-second {
-    display: block;
     padding: 10px;
 }
 
